# NicSpeedyModule

./: .gitignore  .travis.yml  LICENSE  README.md  current_rest_results.txt  nic_speedy_module.c  readme.Md  setup.py  setup_eth.sh  smoke_test.py  test_modul_speed.sh
module_tests/: ethtool_test.py  get_nic_test.py  ifaddr_test.py  my_module_test.py  netifaces_test.py
module_tests/getnifs/: getnifs.py  getnifs_test.py
scripts/: delete_dummy_nic.sh  set_ips_eth.sh  setup_eth.sh  test_modul_speed.sh
src/: CMakeLists.txt  IfNetUtils.c  IfNetUtils.h  my_module.c  setup.py  smoke_test.py
